fix: overflowing issue

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,11 @@ body{
 
 
 .container {
-    border: 1px solid rebeccapurple;
+    border: 2px solid black;
+    width: 400px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
 }
 
 
